--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Page - Dashboard Admin Template</title>
+    <title>Login - ExtaleCC</title>
     <!--
 
     Template 2108 Dashboard
@@ -48,7 +48,7 @@
                                     <button type="submit" class="btn btn-primary d-inline-block mx-auto">Login</button>
                                 </div>
                                 <div class="input-group mt-3">
-                                    <p><em>Just put a character to login.</em></p>
+                                    <p><em> </em></p>
                                 </div>
                             </form>
                         </div>
@@ -59,8 +59,8 @@
         <footer class="row tm-mt-big">
             <div class="col-12 font-weight-light text-center">
                 <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-                    Copyright &copy; 2018 Admin Dashboard . Created by
-                    <a rel="nofollow" href="https://www.tooplate.com" class="text-white tm-footer-link">Tooplate</a>
+                    Copyright &copy; ExtaleCC.github.io ~ Created with
+                    <a rel="nofollow" href="https://pages.github.com/" class="text-white tm-footer-link">Github Pages</a>
                 </p>
             </div>
         </footer>
